@@ -7,5 +7,5 @@ Name: Lilv
 Version: @LILV_VERSION@
 Description: Simple C library for hosting LV2 plugins
 Requires: lv2 @PKG_serd_0@ @PKG_sord_0@ @PKG_sratom_0@
-Libs: -L${libdir} -l@LIB_LILV@ -ldl
+Libs: -L${libdir} -l@LIB_LILV@ @LILV_PKG_LIBS@ -ldl
 Cflags: -I${includedir}/lilv-@LILV_MAJOR_VERSION@
